feat: adopt multi-country administrative hierarchy
