# src/main/java/com/petrolprice/station_search_api/station/search/infrastructure/rest/StationController.java
@@ -30,7 +30,9 @@ public class StationController implements StationsApi {
             Integer page,
             Integer size,
             String countryCode,
-            String locality,
+            String adminArea1,
+            String adminArea2,
+            String adminArea3,
             Double lat,
             Double lng,
             Integer radiusMeters,
@@ -43,7 +45,9 @@ public class StationController implements StationsApi {
         StationSearchParameters parameters = StationSearchParameters.builder()
                 .searchMode(searchMode)
                 .countryCode(countryCode)
-                .locality(locality)
+                .adminArea1(adminArea1)
+                .adminArea2(adminArea2)
+                .adminArea3(adminArea3)
                 .latitude(lat == null ? null : BigDecimal.valueOf(lat)) // TODO: fix this
                 .longitude(lng == null ? null : BigDecimal.valueOf(lng))
                 .radiusMeters(radiusMeters)
